--- a/7.0+CSS+Cascade/style.css
+++ b/7.0+CSS+Cascade/style.css
@@ -3,10 +3,15 @@
 .box {
   background-color: blue;
   padding: 10px;
+
 }
 
 p {
   color: yellow;
   margin: 0;
   padding: 0;
+}
+.white-text
+{
+  background-color: red;
 }
